[package]
name = "accounts"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
femme = "2.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-async-std",
    "tls-rustls",
] }
strum = "0.25.0"
strum_macros = "0.25.3"
tide = "0.16.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
