[package]
name = "accounts"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.31"
dotenv = "0.15.0"
envconfig = "0.10.0"
femme = "2.2.1"
lazy_static = "1.4.0"
lettre = "0.11.2"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-async-std",
    "tls-rustls",
    "chrono",
] }
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
tide = "0.16.0"
tracing = "0.1.40"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
