[package]
name = "service-accounts"
version = "0.1.0"
edition = "2021"
authors = ["Afonso Coutinho <afonsopcastro@gmail.com>"]
readme = "README.md"
repository = "https://github.com/afonsopc/website-magister"
homepage = "https://www.pagman.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "headers"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
jsonwebtoken = "8.3.0"
lettre = "0.10.4"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["add-extension", "cors", "fs"] }
